--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^1.1.3",
-    "query-string": "^4.3.4"
+    "query-string": "^4.3.4",
+    "request": "^2.81.0"
   }
 }
